--- a/_units/10.md
+++ b/_units/10.md
@@ -49,14 +49,23 @@ Some quotes on expectancy, expectation, and anticipation:
 
 Here is an example of three different conditions of expectancy in music. Listen to the following three clips of music. Which one sounds the most expected? Which one sounds most unexpected?
 
-1. 
-1. 
-1. 
+1. {% raw %}
+{% include img-figure url="/MUTOR/assets/audios/unit10_Cmandemo.wav" description="Cmajor normal" %}
+{% endraw %}
+1. {% raw %}
+{% include img-figure url="/MUTOR/assets/audios/unit10_CmaD3demo.wav" description="Cmajor normal" %}
+{% endraw %}
+1. {% raw %}
+{% include img-figure url="/MUTOR/assets/audios/unit10_CmanD5emo.wav" description="Cmajor normal" %}
+{% endraw %}
 
 # Why do we study expectation?
 
 Expectations are evolutionarily adaptive because the ability to form expectations accurately for future events facilitates us in our perception and action. To illustrate the evolutionary advantage for expectation, imagine the following scenario. You are driving your car up the street when you see this: 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_boy-run-ball.jpg" description="Boy running after ball" %}
+{% endraw %}
  (image source: http://save-u.org)
  
 What would you do?
@@ -91,9 +100,29 @@ The word "socks" at the end of the sentence is a violation of expectations. Your
 Expectations also play a strong role in our perception and cognition of music. When listening to music, one necessarily forms expectations for sounds that are about to occur next. Consider the following example: 
  
 What would you expect to hear next?
-1. 
-1. 
-1. 
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit10_twinkle1.mp3">
+    <audio controls src="/MUTOR/assets/audios/unit10_twinkle2.mp3">
+    <audio controls src="/MUTOR/assets/audios/unit10_twinkle3.mp3">
+    <audio controls src="/MUTOR/assets/audios/unit10_twinkle4.mp3">
+      Your browser does not support the audio element.
+    </audio>
+    <p>Demo Normal Hearing vs. High-Frequency Hearing loss</p>
+  </body>
+</html>
+1. {% raw %}
+{% include img-figure url="/MUTOR/assets/audios/unit10_twinkle1.mp3" description="Cmajor normal" %}
+{% endraw %}
+1. {% raw %}
+{% include img-figure url="/MUTOR/assets/audios/unit10_twinkle2.mp3" description="Twinkle2 normal" %}
+{% endraw %}
+1. {% raw %}
+{% include img-figure url="/MUTOR/assets/audios/unit10_twinkle3.mp3" description="Twinkle3 normal" %}
+{% endraw %}
 
 While 1 seems to be the most obviously expected answer, 2 was the more artistically interesting, albeit slightly unexpected. Choice 2 was in fact used in the actual recording of Mozart's Twinkle Twinkle Little Star Variations. This example shows that it is the slight variations, the slight manipulations of expectations, that we find most interesting and artistically appealing. Thus, the ability to form expectations has been proposed as the source of emotion and meaning in music (Meyer, 1956).
 
@@ -113,6 +142,10 @@ Meyer (1956), in his seminal book Emotion and Meaning in Music, proposed that sy
 
 Although the model allows for many possibilities, the exact relationship between expectation and affect was not formally defined in the Expectation-Arousal theory. Thus it is unclear exactly what degree of expectation leads to maximal arousal; nor it is clear how expectation can be systematically manipulated. 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_expvio_models.gif" description="Models of expectation violation" %}
+{% endraw %}
+
 Three possible functions relating expectation and arousal. Meyer's (1956) Expectation-Arousal theory does not differentiate between these three predictions. 
 
 Nonetheless, we know that expectancy and affect are indeed highly related. Consider the following three chord progressions (they are the same ones from earlier. Which one do you prefer? 
@@ -122,7 +155,10 @@ Nonetheless, we know that expectancy and affect are indeed highly related. Consi
 
 The following graph represents musically trained and untrained subjects' preference ratings for the three chord progressions. Results show that expectation has a large effect on people's ratings, but musical training does not. 
 
-(image source: Loui & Wessel, in review)
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_VoExp_affect.png" description="Violation of Expectation relates to affect" %}
+{% endraw %}
+(image source: Loui & Wessel, 2007)
  
 # Expectation For Melody
 
