--- a/_units/10.md
+++ b/_units/10.md
@@ -168,6 +168,14 @@ To date, the most well-specified models for musical expectation mostly refer to 
 
 Narmour's Implication Realization Model provides a set of predictions for melodic structure. In particular, the IR model looks at interval sizes and directions between notes of a melody. An interval is defined as the difference in pitch between any two successive notes. In the IR model, when given three notes making two intervals, the first interval is defined as the Implication interval, whereas the second interval is the Realization interval. 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_ir.gif" description="Implied and Realized Intervals" %}
+{% endraw %}
+
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_ir1.gif" description="Implied and Realized Intervals checkerboard" %}
+{% endraw %}
+
 ### Definitions of the IR model
 
 (image source: Krumhansl, 1995) 
@@ -179,11 +187,22 @@ The IR model predicts these melodic principles (based on Krumhansl, 1995):
 * Intervallic Difference – small intervals imply similar-sized intervals; large intervals imply smaller intervals
 * Registral Return – intervals imply similarly sized intervals in the opposite direction  (image source: Krumhansl, 1995)
 * Proximity – realized intervals should be no larger than a perfect 4th.
-* Closure – realized intervals tend to smaller and in the opposite direction than implied intervals.  (image source: Krumhansl, 1995)
+* Closure – realized intervals tend to smaller and in the opposite direction than implied intervals.  
+
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_ir2.gif" description="Implied and Realized Intervals2" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_ir3.gif" description="Implied and Realized Intervals3" %}
+{% endraw %}
+
+(image source: Krumhansl, 1995)
 
 ## Gap Fill
 
 Gap fill was first proposed by Huron (1990?) as a parsimonious account for interval sizes and directions in melodies. The basic principle of gap fill states that large intervals in a melody imply smaller intervals in the opposite direction. 
+
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_gap_fill.gif" description="Gap Fill" %}
+{% endraw %}
 
 An illustration of gap fill processes. 
 
@@ -205,18 +224,30 @@ In the Jones et al (2002) experiment, melodies were played with the last note's 
 
 A diagram of the Jones et al paradigm: 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_jones1.gif" description="Jones 1" %}
+{% endraw %}
 (image source: Huron, 2006) 
 
 Cartoon of results from Jones et al, showing heightened perceptual accuracy at the expected onset time:
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_jones2.gif" description="Jones 2" %}
+{% endraw %}
 (image source: Huron, 2006)
 
 Rhythmic Expectancy Curve showing optimal perceptual performance when the target note is at the expected downbeat. 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_jones_exp_curve.gif" description="Jones exp curve" %}
+{% endraw %}
 (image source: Jones et al, 2002).
 
 A model of rhythmic entrainment 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_jones_entrain.gif" description="Jones entrainment model" %}
+{% endraw %}
  (image source: Jones et al, 2002)
 
 # Methods for assessing musical expectancy
@@ -254,12 +285,18 @@ Click here for a demo of the probe tone paradigm.
 
 Some typical profiles are shown here:
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_probetoneprofiles1.png" description="Probe Tone profiles1" %}
+{% endraw %}
 (image source: Krumhansl, 1990)
 
 Notice that when the melodies given to the subjects are in related keys (e.g. C major and a minor scales, as shown in the top panel), the average ratings are highly correlated. In contrast, in response to melodies in unrelated keys such as C major and F# major (bottom panel), the correlations between rating profiles are low, or even negatively correlated. 
 
 Probe tone profiles obtained for Western music are also shown to reflect the statistics of musical compositions (Krumhansl, 1990). 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_probetoneprofiles2.png" description="Probe tone profiles2" %}
+{% endraw %}
 (image source: Krumhansl, 1990)
 
 Probe tone profiles for major (top) and minor (bottom) keys are highly correlated with the relative frequency at which pitch classes appear in corpuses of classical music. 
@@ -270,6 +307,9 @@ To gain a full understanding of musical expectation, it is not enough to only us
 
 In a study using meloies from the Balinese slendro scale (Castellno et al, 1984), Indonesian and Western subjects Results from probe tone profiles obtained from Balinese music were correlated with tones heard in the Balinese slendro scale. For Indonesian subjects with long-term exposure to Balinese music, correlational strengths reflected a sensitivity to the hierarchy of the scale; i.e. tones that fitted the tonal hierarchy were rated as most fitting, whereas atypical tones in the Balinese scale structure were rated as poorly fitting. In contrast, after listening to Balinese melodies, Westerners demonstrated a significant correlation with the occurrence of the Balinese music; that is, Westerners rated anything they had heard in the Balinese music as being well-fitting. 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_balinese_correlations.jpg" description="balinese correlations" %}
+{% endraw %}
 (image adapted from Huron, 2006) Results from probe tone profiles obtained from North Indian music.
 
 The ethnomusicologist Simha Arom (1991) has investigated rhythm and polyrhythm in Central African music using cognitive principles. His results show that while African music seems to have incredibly complex rhythmic structures, where each member of an ensemble operates at a different metric pattern, these complex polyrhythms could in fact be broken down into simple time ratios such as 2+2+3. These results suggest that expectancy for complex rhythms could also operate on simple cognitive structures. 
@@ -280,10 +320,16 @@ Another commonly used method to investigate musical expectation, which has been 
 
 In the standard reaction time experiment looking at harmonic expectancy (e.g. Bharucha & Stoeckig, 1986; Bigand et al, 1999), participants were presented with chord progressions ending with "target" chords. Some of the target chords were harmonically expected whereas others were harmonically unexpected. Half of the target chords were manipulated so that they were either of tune, or dissonant, or slightly temporally asynchronous (i.e. the notes in the chord started slightly unevenly). Participants' task was to determine whether the target chords were in tune/consonant/temporally synchronous depending on the experiment. Typically, results reveal delayed reaction times and increased error rates for harmonically unexpected target chords. The pattern of results seems similar for musicians and nonmusicians. This methodology is also known as harmonic priming, where the chord progressions prime participants into expecting certain target chords. 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_rt-harm-priming2.gif" description="rt-harm-priming2.gif" %}
+{% endraw %}
 (image source: Bigand et al, 1999)
  
 Examples of chord progressions with expected and unexpected endings presented to the participants. 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_rt-harm-priming3.gif" description="rt-harm-priming3.gif" %}
+{% endraw %}
  (image source: Bigand et al, 1999)
 
 Results from a harmonic priming paradigm.
@@ -296,9 +342,20 @@ One commonly used experimental method for infants is the head turn paradigm. The
 
 In the head turn paradigm for musical expectation, the light is usually paired with a speaker which plays different musical sounds. In an experiment using groups of musical tones, Saffran et al (1999) paired groups of three tones together with predictable probabilities. For instance, After hearing a stream of tones with these predictable probabilities between them, infants showed a habituation effect towards groups of tones that had been presented with high transitional probability, but a dishabituation towards tone groups with low transitional probability. These results suggest that infants could learn to expect more probable tone groups. 
  
+ 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_head_turn_lit.gif" description="head_turn_lit.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_head_turn_unlit.gif" description="head_turn_unlit.gif" %}
+{% endraw %}
 Example of apparatus for the head turn paradigm. Sounds played from speakers are paired with lights which turn on when the sounds are presented. If the sound has been heard many times before, the infant tends not to turn to look at the light. If the sound is novel, the infant tends to look at the light. Thus amount of time spent looking at the light can be used as an approximation to whether an infant can tell the difference between two sets of sounds. 
 
 Saffran's study on statistical learning of musical expectations
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_saffran_tonegroups.gif" description="saffran_tonegroups.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_saffran_transprob.gif" description="saffran_transprob.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_saffran_tonestream.gif" description="saffran_tonestream.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_saffran_testitems.gif" description="saffran_testitems.gif" %}
+{% endraw %}
 
 # Statistical Learning
 
@@ -306,11 +363,19 @@ From the head turn paradigm, the probe tone paradigm, and comparative ethnomusic
 
 Statistics in music can be calculated at many levels. At the simplest level, event frequencies of notes constitutes a first-order statistic, where the notes occurring most often tend to be most highly expected. 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_stats1.gif" description="saffran_stats1.gif" %}
+{% endraw %}
+
 An illustration of first order statistics. Notice that A occurs most frequently in the above passage, B occurs second most frequently, and C occurrs least frequently. Thus:
 
 Freq(A)>Freq(B)>Freq(C).
 
 On a higher level, statistics can be observed based on second-order statistics, or the transitional probability of one event given its previous event. Consider the following example:
+
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_stats2.gif" description="saffran_stats2.gif" %}
+{% endraw %}
 
 In this passage, D occurs most frequently before E and after C, except for one instance where D occurs after E and before C. Thus, the frequency of CD as a group is higher than the frequency of ED as a group:
 
@@ -324,6 +389,10 @@ By plugging in the formula for transitional probability, we can prove that P(E|D
 
 At an even higher level, we can observe higher-order statistics which may not depend on the events themselves, or the events immediately before or after; instead, higher-order statistics may depend on multiple instances many different events apart. In the following example:
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/unit10_stats3.gif" description="saffran_stats3.gif" %}
+{% endraw %}
+
 The first note in each group (the low G in this case) is predictive of the first note in the next group, regardless of what notes occur in the rest of each group. These non-adjacent dependencies, where one note depends not on its immediate predecessor but on another note many events before it, are important in creating a sense of implied harmony and are useful in voice leading.
 
 ## Electrophysiological Studies
@@ -333,10 +402,16 @@ Event-Related brain Potentials (ERPs) are time-locked averages of electrical sig
 
 Event-Related Potentials have been used to investigate expectations for melody and harmony. In Besson & Faita's (1995) experiment investigating melodic expectations, melodies were presented with expected, slightly unexpected, and highly unexpected endings. ERPs showed a positive fluctuation at around 600ms after the onset of the unexpected notes, and the amplitude of this positive fluctuation (termed the Late Positive Component, or LPC) depended on how unexpected the note sounded to the subject. Thus, individuals who were more sensitive to expectations, such as people with musical training, tended to show a stronger effect. 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/besson95stim.gif" description="besson95stim.gif" %}
+{% endraw %}
  (image source: Besson & Faita, 1995)
  
 Examples of Besson & Faita's (1995) stimuli. Melodies were presented with expected, slightly unexpected, and highly unexpected endings. 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/besson95erps.gif" description="besson95erps.gif" %}
+{% endraw %}
  (image source: Besson & Faita, 1995)
  
 ERP results from Besson & Faita (1995). Negative potential is plotted upwards by convention. Notice a positve difference between ERPs for unexpected (incongruous = highly unexpected; diatonic = slightly unexpected) and expected (congruous) notes. This difference, named the Late Positive Complex (LPC), is largest parietally around 600ms after the onset of the note and is larger for musicians. 
@@ -345,6 +420,9 @@ Event-Related Potentials have also been used to investigate expectation for harm
 
 The earlier of the two components has been coined Early Right Anterior Negativity (ERAN) by Koelsch et al (2000) because the effect was originally observed as a negative waveform largest around the right anterior area of the human scalp. Similar effects were subsequently named EAN (Early Anterior Negativity) (Loui et al, 2005) because they were mostly observed bilaterally instead of right-sided in other studies. The later component was coined N5 (Negativity at 500ms) by Koelsch et al (2000) and LN (Late Negativity) by Loui et al (2005). 
 
+{% raw %}
+{% include img-figure url="/MUTOR/assets/images/loui05att.png" description="loui05att.png" %}
+{% endraw %}
  (image source: Loui et al, 2005)
  
 ERPs elicited by expected and unexpected chords. Negative is plotted up. Notice that the ERPs for the two kinds of chords diverge at two time points, first around 150-250ms, and then again at 400-600ms. Both effects are negative for the unexpected chords. The earlier effect is largest bilaterally over frontal areas of the brain; the later effect is largest over prefrontal areas. 
